// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Avatar component renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Container Style 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FF9800",
      "borderColor": "#FFB74D",
      "borderRadius": 8,
      "borderWidth": 2,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props First Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          Object {
            "color": "#FF9800",
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon Check Circle 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#13B055",
              "borderRadius": 10,
              "height": 20,
              "justifyContent": "center",
              "marginLeft": 8,
              "padding": 4,
              "width": 20,
            }
          }
          testID="header_avatar.icon_check"
        >
          <View
            accessibilityState={
              Object {
                "disabled": true,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={false}
            hitSlop={
              Object {
                "bottom": 10,
                "left": 10,
                "right": 10,
                "top": 10,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  undefined,
                  Object {
                    "backgroundColor": undefined,
                  },
                ]
              }
            >
              <View
                style={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              >
                <View />
              </View>
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon First Label 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="header_avatar.icon_first_label"
              />
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Icon First Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View>
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View
                testID="header_avatar.icon_first_label"
              />
            </View>
          </View>
        </View>
      </View>
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;

exports[`Header Avatar component renders correctly with props Second Label Props 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EAEDF2",
      "borderRadius": 4,
      "flexDirection": "row",
      "marginBottom": 24,
      "marginHorizontal": 16,
      "marginTop": 16,
      "opacity": 1,
      "padding": 8,
    }
  }
  testID="header_avatar"
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 8,
          "height": 48,
          "width": 48,
        },
        undefined,
      ]
    }
    testID="avatar"
  >
    <View
      style={
        Array [
          Array [
            Object {
              "borderRadius": 8,
              "height": 48,
              "width": 48,
            },
            Object {
              "borderRadius": 24,
            },
          ],
          Object {},
        ]
      }
      testID="avatar_container"
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Array [
                Object {
                  "borderRadius": 8,
                  "height": 48,
                  "width": 48,
                },
                Object {
                  "borderRadius": 24,
                },
              ],
              Object {
                "borderColor": "#F2F5F8",
                "borderWidth": 2,
              },
              Object {
                "backgroundColor": "#FFFFFF",
              },
            ],
          ]
        }
      >
        <FastImageView
          onFastImageError={[Function]}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://bein-entity-attribute-stg.s3.ap-southeast-1.amazonaws.com/user/avatar/Avatar_Profile.png",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          testID="avatar.image"
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 8,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
      testID="header_avatar.first_label"
    >
      First Label
      <View />
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Medium",
            "fontSize": 13,
          },
          Object {},
          Object {
            "color": "#FF9800",
            "textDecorationLine": "underline",
          },
        ]
      }
      testID="header_avatar.second_label"
    >
      Second Label
    </Text>
  </View>
</View>
`;
